chore: reformat code and resolve warnings